--- a/symphony/assets/admin.css
+++ b/symphony/assets/admin.css
@@ -1056,6 +1056,12 @@ ul.page form span {
 .field {
 	min-height: 45px;
 }
+.field-checkbox {
+	min-height: 25px;
+}
+.field-checkbox:first-child {
+	margin-top: 20px;
+}
 .file input {
 	margin: -3px 0;
 	font: inherit;
@@ -1085,6 +1091,9 @@ ul.page form span {
 	border-top: 1px solid rgba(0, 0, 0, 0.1);
 	padding: 1.75em 0 0;
 	margin: 0 18px;
+}
+.single #contents .columns .actions {
+	margin: 0;
 }
 .single #contents .actions input {
 	float: right;
