--- a/symphony/assets/symphony.frames.css
+++ b/symphony/assets/symphony.frames.css
@@ -13,6 +13,47 @@
 	content: "";
 	clear: both;
 }
+
+/*--------------------------------------------------------------------------
+	Inline frames (e. g. upload fields)
+--------------------------------------------------------------------------*/
+
+span.frame {
+	display: block;
+	margin-bottom: 15px;
+	border: 1px solid rgba(0, 0, 0, 0.2);
+	padding: 10px;
+	background-color: #f5f5f3;
+	text-align: center;
+	box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+	border-radius: 4px;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+}
+
+/*--------------------------------------------------------------------------
+	Error frames
+--------------------------------------------------------------------------*/
+
+#error .frame {
+	display: block;
+	border: 1px solid rgba(0, 0, 0, 0.2);
+	padding: 10px;
+	background-color: #f5f5f3;
+	text-align: left;
+	box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+	border-radius: 4px;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+	min-width: 500px;
+	max-width: 800px;
+	margin: 200px auto;
+}
+
+/*--------------------------------------------------------------------------
+	Framed lists (e. g. Duplicators)
+--------------------------------------------------------------------------*/
+
 .frame ol, .frame ul:not(.tags) {
 	margin: 0;
 	padding: 0;
@@ -29,10 +70,6 @@
 .frame.empty ol {
 	border: 1px dashed rgba(0, 0, 0, 0.2);
 }
-
-/*--------------------------------------------------------------------------
-	Lists
---------------------------------------------------------------------------*/
 
 .frame li {
 	padding: 0 10px;
@@ -278,38 +315,4 @@
 }
 .frame .apply:hover {
 	border-color: rgba(0, 0, 0, 0.4);
-}
-
-/*--------------------------------------------------------------------------
-	Inline frames
---------------------------------------------------------------------------*/
-
-span.frame {
-	display: block;
-	margin-bottom: 1.5em;
-	border: 1px solid rgba(0, 0, 0, 0.2);
-	padding: 10px;
-	background-color: #f5f5f3;
-	text-align: center;
-	box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
-	border-radius: 4px;
-	-moz-box-sizing: border-box;
-	box-sizing: border-box;
-}
-span.frame code {
-	color: #919183;
-}
-span.frame button,
-span.frame .button {
-	float: none;
-}
-.primary label > * + span.frame,
-.secondary label > * + span.frame {
-	margin-top: 1.25em;
-}
-.primary label > i + span.frame,
-.secondary label > i + span.frame,
-.primary label > span.frame:first-child,
-.secondary label > span.frame:first-child {
-	margin-top: 0;
 }
