--- a/symphony/assets/admin.css
+++ b/symphony/assets/admin.css
@@ -648,6 +648,7 @@ div.notifier nav:hover:before {
 	color: #bdc3c3;
 	text-decoration: none;
 	border-bottom: 1px solid #7c7c7c;
+	margin: 0 3px;
 }
 .notice a:hover {
 	color: #e4ece4;
