--- a/symphony/assets/symphony.frames.css
+++ b/symphony/assets/symphony.frames.css
@@ -484,3 +484,41 @@ span.frame {
 .frame .actions button {
 	float: right;
 }
+
+
+/*-----------------------------------------------------------------------------
+	Globals - Errors
+-----------------------------------------------------------------------------*/
+
+.invalid {
+	background: #eb6347;
+	border: 1px solid #c31;
+	padding: 10px;
+	margin: 0 0 15px;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	-ms-box-sizing: border-box;
+	-o-box-sizing: border-box;
+	box-sizing: border-box;
+	display: block;
+	color: #fff;
+	border-radius: 4px;
+	box-shadow: 0 1px 2px rgba(204, 51, 17, 0.3);
+}
+.invalid > p {
+	clear: both;
+	margin: 0;
+}
+.invalid > p,
+.invalid a {
+	color: rgba(255, 255, 255, 0.7);
+}
+.invalid a:hover {
+	color: #fff;
+}
+.invalid label {
+	margin-bottom: 10px;
+}
+.invalid i {
+	color: rgba(255, 255, 255, 0.5);
+}
