--- a/symphony/assets/symphony.grids.css
+++ b/symphony/assets/symphony.grids.css
@@ -7,14 +7,13 @@
 	margin-left: -15px;
 	clear: both;
 }
-
 .columns:after {
 	content: "";
 	clear: both;
 	display: block;
 }
-
-.columns .column, .columns .invalid {
+.columns .column,
+.columns > .invalid {
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	-ms-box-sizing: border-box;
@@ -26,22 +25,18 @@
 
 /* Equal columns */
 
-.two.columns .column, .two.columns .invalid {
+.two.columns .column,
+.two.columns > .invalid {
 	width: 50%;
 }
-
-.three.columns .column {
+.three.columns .column,
+.three.columns > .invalid {
 	width: 33.33%;
 }
-
-.four.columns .column {
+.four.columns .column,
+.four.columns > .invalid {
 	width: 25%;
 }
-
-.columns .invalid .column {
-	width: 100%;
-}
-
 .columns legend {
 	margin: 0 0 0 -15px !important;
 	padding: 0 5px 0 15px !important;
@@ -57,7 +52,6 @@ form.columns .column.primary {
 	padding: 0;
 	width: 100%;
 }
-
 .two.columns .column.primary {
 	margin: 0;
 	width: 65%;
@@ -65,4 +59,31 @@ form.columns .column.primary {
 .two.columns .column.secondary {
 	margin: 0;
 	width: 35%;
+}
+
+/* Errors in columns */
+
+.columns > .invalid {
+	background: none;
+	border: none;
+	border-radius: 0;
+	box-shadow: none;
+}
+.columns > .invalid .column {
+	background-color: #eb6347;
+	border: 1px solid #c31;
+	border-bottom: 0;
+	border-radius: 4px 4px 0 0;
+	padding: 10px 10px;
+	width: 100%;
+	float: none;
+	margin: 0;
+}
+.columns > .invalid > p {
+	background-color: #eb6347;
+	border: 1px solid #c31;
+	border-top: 0;
+	border-radius: 0 0 4px 4px;
+	box-shadow: 0 1px 2px rgba(204, 51, 17, 0.3);
+	padding: 0 10px 10px;
 }
