--- a/symphony/assets/symphony.basic.css
+++ b/symphony/assets/symphony.basic.css
@@ -134,6 +134,7 @@ select[multiple] {
 	width: 100%;
 	height: 10em;
 }
+input[size],
 input[type=radio],
 input[type=checkbox] {
 	display: inline;
